Fix website title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth" data-beasties-container>
 <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="utf-8">
-  <title>LsWebsite</title>
+  <title>Lüdtwig Schmüdy - Official Website</title>
   <base href="https://ludtwigschmudy.github.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
